# filipino-mahjong-solver

./: README.md  experiment.ipynb  main.py  pyproject.toml  solver.py
models/: game.py  tile.py
