[tool.poetry]
name = "filipino-mahjong-solver"
version = "0.1.0"
description = "Filipino Mahjong Solver"
authors = ["Ian Chu Te <ianhervechute@gmail.com>"]
license = "The Unlicense"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.1"
tqdm = "^4.62.3"
black = "^22.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
